[package]
name = "rs-lines"
version = "0.1.1"
authors = ["Jacob Zimmermann <ppa@jzimm.net>"]
edition = "2018"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_18"]

[dependencies]
gio = "0.8.1"
cairo-rs = "0.8.1"
rand = "0.7.3"
lazy_static = "1.4.0"
glib = "0.9.3"

[profile.release]
panic = "abort"
